--- a/E-CommerceWebApplication/E-CommerceWebApplication.csproj
+++ b/E-CommerceWebApplication/E-CommerceWebApplication.csproj
@@ -18,6 +18,7 @@
 
   <ItemGroup>
     <Folder Include="wwwroot\Images\Category\" />
+    <Folder Include="wwwroot\Images\Product\" />
   </ItemGroup>
 
 </Project>
